[gd_scene load_steps=4 format=3 uid="uid://main"]

[ext_resource type="Script" uid="uid://ug6tctptmhng" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Theme" uid="uid://sx8r7eylidoh" path="res://themes/Classic311/Classic311.tres" id="1_r0du0"]
[ext_resource type="Texture2D" uid="uid://cqet3pkx63wvj" path="res://themes/click-me-game-free.png" id="3_r0du0"]

[node name="Main" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(432, 775)
layout_mode = 3
anchors_preset = 0
offset_right = 561.0
offset_bottom = 775.0
theme = ExtResource("1_r0du0")
script = ExtResource("1_ig7tw")
metadata/_edit_vertical_guides_ = [-414.0]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
offset_right = 46.0
offset_bottom = 40.0
scale = Vector2(10.7864, 19.3277)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 46.0
offset_bottom = 40.0
scale = Vector2(10.8019, 2.6823)
color = Color(0.716296, 0.716296, 0.716296, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
light_mask = 0
use_parent_material = true
layout_mode = 1
anchors_preset = -1
anchor_right = 0.166667
anchor_bottom = 0.237419
offset_right = 404.0
offset_bottom = 588.0
metadata/_edit_use_anchors_ = true

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="PointsLabel" type="Label" parent="MarginContainer/VBox/TopBar"]
clip_contents = true
custom_minimum_size = Vector2(290, 70)
layout_mode = 2
text = "Body: 0"

[node name="RightStats" type="VBoxContainer" parent="MarginContainer/VBox/TopBar"]
clip_contents = true
custom_minimum_size = Vector2(200, 0)
layout_direction = 2
layout_mode = 2
alignment = 1

[node name="PointsPerSecondLabel" type="Label" parent="MarginContainer/VBox/TopBar/RightStats"]
clip_contents = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
text = "P≈ô√≠jem: +0.0/s"
clip_text = true

[node name="PrestigeInfoLabel" type="Label" parent="MarginContainer/VBox/TopBar/RightStats"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Prestige: 0 (x1.0)"

[node name="ClickSection" type="VBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="ClickButton" type="TextureButton" parent="MarginContainer/VBox/ClickSection"]
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3
button_mask = 7
texture_normal = ExtResource("3_r0du0")
stretch_mode = 0

[node name="UpgradesBox" type="VBoxContainer" parent="MarginContainer/VBox"]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2
size_flags_vertical = 3

[node name="PrestigeButtons" type="VBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 10

[node name="PrestigeButton" type="Button" parent="MarginContainer/VBox/PrestigeButtons"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Resetuje progres a p≈ôid√° prestige body za ka≈æd√Ωch 1000 bod≈Ø. Ka≈æd√Ω bod = +10‚ÄØ% zisk."
text = "Prestige (reset za bonus) ‚Äì vy≈æaduje 1000 bod≈Ø."

[node name="PrestigeShopButton" type="Button" parent="MarginContainer/VBox/PrestigeButtons"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Vy≈æaduje alespo≈à 1 prestige bod pro v√Ωbƒõr vylep≈°en√≠."
text = "Prestige shop"

[node name="AchievementsButton" type="Button" parent="MarginContainer/VBox/PrestigeButtons"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_r0du0")
text = "Achievementy"

[node name="OfflineDialog" type="AcceptDialog" parent="."]
position = Vector2i(140, 271)
size = Vector2i(133, 112)
visible = true
ok_button_text = "D√≠ky!"
dialog_text = "üí∞ V√≠tej zpƒõt!
Z√≠skal jsi body."
